# rocketseat.desafio.k8s

./: DESAFIO.md  README.md  docker-compose.yml
app/: Dockerfile  alembic.md  pyproject.toml
app/alembic/: env.py
app/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  secrets.yaml  service.yaml
app/src/: app.py
app/src/infra/sqlalchemy/config/: database.py
app/src/infra/sqlalchemy/models/: __init__.py  products.py
app/src/infra/sqlalchemy/repositories/: products_repository.py
app/src/routers/: health.py  products.py
app/src/schemas/: product_schema.py
cluster/: kind.yaml
database/: Dockerfile  init.sql
database/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  pv.yaml  pvc.yaml  secrets.yaml  service.yaml
